fixed the alignment issue

--- a/style.css
+++ b/style.css
@@ -9,11 +9,25 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+@media (max-width: 600px) {
+    .maindiv {
+      width: 100%;
+    }
+
+  }
+  
+  @media (min-width: 601px) {
+    .maindiv {
+      width: 35%;
+    }
+  }
+
+
 .maindiv {
-    height: auto;
-    margin: 50px auto 150px auto;
+    margin: 150px auto;
     display: flex;
-    width: 35%;
+  
     border-radius: 25px;
     flex-direction: column;
     border-radius: 25px;
